[gd_scene load_steps=3 format=2]

[ext_resource path="res://Houston Mission Simulator/images/watermark.png" type="Texture" id=2]
[ext_resource path="res://Houston Mission Simulator/scripts/page.gd" type="Script" id=3]

[node name="Page" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -20.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevPage" type="Button" parent="Navigation"]
margin_left = 10.0
margin_top = 533.0
margin_right = 92.0
margin_bottom = 561.0
text = "Prev"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="NextPage" type="Button" parent="Navigation"]
margin_left = 290.0
margin_top = 533.0
margin_right = 372.0
margin_bottom = 561.0
text = "Next"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Index" type="Button" parent="Navigation"]
margin_left = 370.0
margin_right = 418.0
margin_bottom = 20.0
rect_rotation = 90.0
text = "Index"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CurrentPageLabel" type="Label" parent="Navigation"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -76.05
margin_right = 180.0
margin_bottom = -62.05
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "01"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Watermark" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 0.141176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = -135.0
margin_right = 186.5
margin_bottom = 135.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Navigation/PrevPage" to="." method="_on_PrevPage_pressed"]
[connection signal="pressed" from="Navigation/NextPage" to="." method="_on_NextPage_pressed"]
[connection signal="pressed" from="Navigation/Index" to="." method="_on_Index_pressed"]
